Bug 1259878 - remove unnecessary isSome(). r=birtles

MozReview-Commit-ID: 3Xh2D5TOTSg